# simple_sync

./: .gitignore  README.md  TODO.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Formula/: simple-sync.rb
docker/ssh-agent/: Dockerfile  entrypoint.sh  sshd_config
examples/: profile.example.toml
scripts/: apply_version_from_tag.py  build-binary.sh  build_full_release.py  build_release.sh  pyinstaller_entry.py  run_docker_tests.py  shell_into_tests_service.py
simple_sync/: __init__.py  cli.py  completion.py  config.py  logging.py  types.py  versioning.py
simple_sync/daemon/: __init__.py  runner.py
simple_sync/engine/: __init__.py  executor.py  merge.py  planner.py  snapshot.py  state_store.py
simple_sync/ssh/: __init__.py  commands.py  copy.py  listing.py  transport.py
tests/: __init__.py  test_binary_build.py  test_cli.py  test_completion.py  test_config_loader.py  test_config_merge.py  test_config_paths.py  test_config_schema.py  test_daemon_runner.py  test_executor.py  test_executor_merge.py  test_logging.py  test_merge.py  test_planner.py  test_planner_merge.py  test_snapshot.py  test_ssh_commands.py  test_ssh_copy.py  test_ssh_integration.py  test_ssh_listing.py  test_ssh_preconnect.py  test_ssh_transport.py  test_state_store.py  test_sync_flow.py  test_types.py  test_versioning.py
